--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,23 @@
-# the composer package lock file and install directory
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# /composer.lock
-/fuel/vendor
+# Ignore composer dependencies
+/vendor/
 
-# the fuelphp document
-/docs/
+# Ignore node_modules directory
+/node_modules/
 
-# you may install these packages with `oil package`.
-# http://fuelphp.com/docs/packages/oil/package.html
-# /fuel/packages/auth/
-# /fuel/packages/email/
-# /fuel/packages/oil/
-# /fuel/packages/orm/
-# /fuel/packages/parser/
+# Ignore any logs and cache files
+/logs/
+/cache/
 
-# dynamically generated files
-/fuel/app/logs/*/*/*
-/fuel/app/cache/*/*
-/fuel/app/config/crypt.php
+# Ignore environment configuration files
+.env
+
+# Ignore any built assets or compiled code
+/public/assets/
+
+# Ignore any editor/IDE specific files
+.idea/
+.vscode/
+
+# Ignore any user-specific files
+.DS_Store
+Thumbs.db
